# scrapmarket

./: .gitignore  Pipfile  README.md  fastlands-offers.json  fastlands.json  get-card-prices.py  pyproject.toml  scrapmarket.py
products/: .gitignore  fastlands.json  single-fastland.json
scrapmarket/: client.py
scrapmarket/adapters/: cli_presenter.py
scrapmarket/domain/entities/: __init__.py  articles.py  expansions.py  games.py  orders.py  products.py
scrapmarket/domain/repositories/: __init__.py  articles.py
scrapmarket/domain/use_cases/: __init__.py  common.py  errors.py  get_product_offers.py  search_product.py
scrapmarket/entities/: games.py  sets.py
scrapmarket/infrastructure/repositories/: __init__.py  articles.py  expansions.py
scrapmarket/repositories/: expansions.py
scrapmarket/use_cases/: errors.py  search_product.py
tests/repositories/: test_articles_repository.py
wishlists/: fastlands.json  painlands.json  snowlivia.json  toxic-convoke.json
