[project]
name = "scrapmarket"
version = "0.1.0"
description = "Scraps MTG data from cardmarket.com"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "requests-oauthlib>=2.0.0",
    "tabulate>=0.10.0",
    "xdg-base-dirs>=6.0.2",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "ruff>=0.15.11",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-requests>=2.33.0.20260408",
    "types-tabulate>=0.10.0.20260408",
]
